--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,24 @@
     </head>
     <style>
      content {
-         width: 200rem;
+         display: block;
+         max-width: 80em;
          margin: auto;
          margin-top: 3rem;
          line-height: 1.5rem;
          color: #333333;
          font-family: monospace;
+         font-size: 1.3em;
      }
     </style>
     <body>
         <content>
         <h1> Haved's work server </h1>
         Hi, and welcome to my work server. You seem to be human, why are you here?
-        This is where
+        This server is for handeling work, such as compiling latex from git.
+        It isn't really meant for humans to just look at, so very few GET requests are handled here.
+        <br>
+        ~~Goodbye~~
         </content>
     </body>
 </html>
